<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/act_profile"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="380dp"
        android:gravity="center"
        android:text="@string/active_profile"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/act_profile_value"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="380dp"
        android:gravity="center"
        android:text="@string/active_profile"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="54dp"
        android:background="@color/bg_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="195dp"
            android:layout_height="158dp"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="58dp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:textSize="70sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-62dp"
            android:layout_marginBottom="121dp"
            android:layout_toStartOf="@+id/temp"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="199dp"
            android:layout_height="48dp"
            android:layout_alignStart="@+id/icon"
            android:layout_alignTop="@+id/textView4"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="0dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_alignStart="@+id/textView4"
            android:text="@string/wind"
            android:textAlignment="textEnd" />

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="90dp"
            android:layout_marginBottom="120dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/wind_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/desc"
            android:layout_alignEnd="@+id/humidity_value"
            android:textColor="@android:color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ToggleButton
            android:id="@+id/button_in"
            style="@android:style/Widget.Material.Light.Button.Toggle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_gravity="bottom"
            android:layout_marginStart="2dp"
            android:gravity="center"
            android:text="@string/in"
            android:textOff="@string/in"
            android:textOn="@string/in"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_night"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/button_out"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/out"
            android:textOff="@string/out"
            android:textOn="@string/out"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_night" />

        <ToggleButton
            android:id="@+id/button_night"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:text="@string/night"
            android:textOff="@string/night"
            android:textOn="@string/night"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
